prep for 1st submission

--- a/dissertation_main.tex
+++ b/dissertation_main.tex
@@ -4,8 +4,8 @@
 \ifpdf
    % put here packages only for the PDF:
    \DeclareGraphicsExtensions{.pdf,.png,.jpg,.mps}
-   \usepackage{hyperref}
-   % \usepackage[plainpages=false]{hyperref}
+   % \usepackage{hyperref}
+   \usepackage[plainpages=false]{hyperref}
 \else
    % put here packages only for the DVI:
 \fi
@@ -29,6 +29,7 @@
 \input{./tex/intro}
 \input{./tex/main}
 \input{./tex/conclusions}
+\input{./tex/acknowledgements}
 
 
 % \appendix
