--- a/tex/acknowledgements.tex
+++ b/tex/acknowledgements.tex
@@ -1,20 +1,20 @@
 \section{Acknowledgements} 
 \label{sec:acknowledgements}
 
-I would like to thank a number of people who've been instrumental in the development of this thesis and my own development along the way.
+I would like to thank a number of people who've been instrumental in the development of this thesis as well as my own development along the way.
 
-My supervisor Marian Ursu for providing focus by asking the right questions every time again.
+My supervisor Dr. Marian Ursu for providing focus by asking the right questions every time again.
+
+Prof. Mark Bishop for leading the programme, guiding us far and wide across different ideas in cognitive science, always with enthusiasm and personal attention.
 
 `her Smallness' Lucia for her never-ending positive support during the structuring of our ideas.
 
-Louise for keeping me up late with great music from all over the world.
+The `Chicken' of Batavia and its inhabitants for making the place like a second home to me. In particular Louise for keeping me up late with great music from all over the world.
 
-The people together with whom we made `Picnic' an inclusive, friendly & safe community, for sharing their knowledge and enthusiasm to make things happen.
+The people together with whom we made `Picnic' an inclusive, friendly and safe learning and teaching community, for sharing their knowledge and enthusiasm to make things happen.
 
 Simone for being a truly nourishing host and dear partner in life and crime during my stay in beautiful Rennes les Baines, where much foundational work for this research was done.
 
-Jan and Pim for bringing out the best in me, no matter how many kilometers our relation spans.
+Jan and Pim for bringing out the best in me, no matter how many kilometers our friendship spans.
 
-Goldsmiths with her unconventional Department of Computing for showing me the creative side of Computer Science and letting me bring together my passions for AI and video.
-
-
+Goldsmiths with her unconventional Department of Computing for having me experience the creative side of Computer Science and letting me merge my passions for AI and video.
