--- a/tex/conclusions.tex
+++ b/tex/conclusions.tex
@@ -1,4 +1,16 @@
 \chapter{Conclusions}
 \label{chapter:conclusions}
+[not yet complete]
 
 This is the conclusions chapter.
+
+\begin{itemize}
+  \item Human Computation might be especially applicable in UGVC (and multimedia) applications
+  \item Human interaction can be a valuable source of information for the filtering of media content, even without explicit use of semantical concepts.
+  \item We have proposed the basis of a system that allows for experimentation with implicit capturing of user interaction data and algorithmic reconfiguration of video segments based on the acquired data. The system can be used for filtering based on attentional data, but interaction opportunities can be extended.
+  \item Specifically the method of Parallel Play may prove useful in allowing for segmented user preference elicitation in time-based media.
+  \item Applied methods are very data-reliant and therefore need more experimentation for results to be further corroborated. An initial analysis though, hints that the methodology can enable meaningful filtering of unstructured video content in a way that is in line with user interests.
+  \item Configuration of video parts to be tested
+  \item Parallel sequences (= reconfiguration) are experienced as informative and entertaining.
+\end{itemize}
+
