--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -1,2 +1,7 @@
 \chapter{Introduction}
 \label{ch:introduction}
+% A person looking to get an overview of the festival he recently attended has a lot of sources to get informed by. Because the festival had 50000 participants who all created the programme together, there 
+
+This section introduces the problem of visual information overload, hints at current methods to solve the problem and indicates why they are not satisfactory for the wide domain of user generated video content that accounts for unprecedented amounts of data and traffic on the web. The idea of human computation is introduced and hinted to as a possible solution. The particular problem of filtering segmented video parts based on interest is introduced.
+
+[not yet complete]
