--- a/tex/main/future.tex
+++ b/tex/main/future.tex
@@ -1,8 +1,9 @@
 \chapter{Future Directions}
 \label{ch:future}
 
-This is the Future Directions chapter.
+[not yet complete]
 
+This is the Future Directions chapter. We discuss possible extensions in terms of both system capabilities and ideas for future research.
 
 Creations thus constructed will embody an interesting aspect of collective creation through the merging of content creators, people contributing their human computational capacity and algorithmic aggregation of these components. It will be interesting to see how these developments take form and how they might shape future ideas of authorship.
 
