--- a/tex/main/meaningfulComputation.tex
+++ b/tex/main/meaningfulComputation.tex
@@ -1,7 +1,7 @@
 \chapter{The Quest for Meaning in Video}
 \label{ch:quest}
 
-[TODO intro to chapter]
+[not yet complete]
 
 \section{Scope of this Chapter}
 
