--- a/tex/main/humanComputation.tex
+++ b/tex/main/humanComputation.tex
@@ -1,10 +1,10 @@
 \chapter{Human Computation towards Visual Meaning}
 \label{ch:humancomputation}
 
-% introduction
+[not yet complete]
 
 \section{Characterising Human Computation}
-[Define GWAP]
+% [Define GWAP]
 
 In a recent survey paper, Quinn and Bederson present a taxonomy of Human computation systems\cite{Quinn:2011us}. They sketch out the trend of this new method for intelligent problem solving by the increase of academic papers featuring the term `human computation' and its relative `crowd-sourcing'. They summarise the myriad of definitions given in recent works by several different authors in two key points:
 
@@ -46,11 +46,11 @@ these inter-video links could be seen as indicators for relatedness and relevanc
 
 There is an important difference here though. Whereas the links used by Google's search algorithms are embedded in machine readable hyperlinks, the path of clicking on from one video to the next is a characteristic of a person's interaction. 
 
-differences:
-	public, readable // private, non readable
-	conscious choice // unconcious result of interaction
-	Concluding
-		can be consciously put in place by several people at large scale // dependent on real `human' traffic.
+% differences:
+%   public, readable // private, non readable
+%   conscious choice // unconcious result of interaction
+%   Concluding
+%     can be consciously put in place by several people at large scale // dependent on real `human' traffic.
 
 
 
