--- a/tex/title.tex
+++ b/tex/title.tex
@@ -33,7 +33,7 @@ Goldsmiths, University of London\\
 New Cross, London SE14 6NW\\
 
 \vfill 
-\today
+September 21, 2012
 
 \end{center}
 \end{titlepage}
